<resources>
    <string name="app_name">Sagarra jo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="btnsaltar">Saltatu</string>
    <string name="password">pasahitza</string>
    <string name="cancel">ezeztatu</string>
    <string name="confirm">baieztatu</string>
    <string name="tituloprincipal">SAGARRA JO</string>
    <string name="nombregrupo">Onandi taldea</string>
    <string name="btnhasi">Hasi</string>
    <string name="btncargar">Partida Kargatu</string>
    <string name="btnnueva">Partida berria</string>
    <string name="inputnombre">Izena</string>
    <string name="introducirnombre">Zure izena azpian jarri</string>
    <string name="titulocargar">Kargatu zure partida!</string>
    <string name="text_bienvenida">Kaixo, lagunok! Ni Upelio
        sagarra naiz, Astigarragako sagarrik ederrena.
        Gaurkoan nirekin batera Astigarraga ezagutuko
        duzue. Gainera, nik sagardo bilakatu nahi dut
        eta ezin dut bakarrik egin. Beraz, zuen laguntza
        eta indar guztiak behar ditut! Horretarako Astigarragan
        zehar ibilbide bat egingo dugu, txoko ezberdinak ezagutuz
        eta nire ametsa egi bilakatzeko horietako bakoitzean
        erronka ezberdin bat pasatu beharko duzue. Horretarako
        oso oso adi egon beharko zarete! Prest zaudete? Goazen!</string>
    <string name="botonhome">HASIERA</string>
    <string name="botonmapa">MAPA</string>
    <string name="botonagain">ERREPIKATU</string>
    <string name="botonnext">HURRENGOA</string>
    <string name="botonhelp">LAGUNTZA</string>
    <string name="botonajustes">EZARPENAK</string>
    <string name="ajustes">EZARPENAK</string>
    <string name="botonidioma">HIZKUNTZA</string>
    <string name="botonoscuro">ALDATU GAIA</string>
    <string name="botonacercade">NORTZUK GARA</string>
    <string name="nombre_1juego">JOSI TA JOSI</string>
    <string name="text_1juego">"Lehenengo geldiunera iritsi gara! Sagardoetxera!
        Sagardoetxea Euskal Sagardogintzaren eta horren kulturaren museoa da. Naturarekin
        kontaktuan izanez, hainbat gauza ikas daitezke bertan.  Horretarako, hiru gune ditu.
        Lehenengoa museo gunea da. Bertan sagarraren historia lantzen da, jokoen, argazkien…
        bitartez eta sagardo goxo-goxoa nola egiten den ikasten da. Horrez gain, panel informatibo
        ugari daude, oso interesgarriak gainera! Bigarren gunea sagastia da. Sagastira sagarrondoak
        ikustera joaten da eta nola ez, sagar ezberdinak ezagutzera. Gainera, bertan hainbat lan
        egiteko aukera dago!  Azkeneko gunea dastatzea denez, sagardo bilakatu aurretik sagar zukua
        dastatzeko aukera egoten da. A ze goxoa!! Mmmm!! "</string>
    <string name="titulo1_juego">"1. GUNEA: SAGARDOETXEA "</string>
    <string name="azalpena1_juego1">Gune honetan hainbat sagar mota ezagutuko eta hartuko dituzu.</string>
    <string name="juego1_azalpena2">Gune honetan sagar zukua dastatuko duzu.</string>
    <string name="juego1_azalpena3">Gune honetan sagarraren historia eta sagadoaren prozesuak landuko dituzu.</string>
    <string name="jositajositext">Misioari ekiteko, lehenik eta behin “Josi `ta josi” jolasera jolastu beharko
        duzue. Horretarako pantailaren alde batean sagardoetxeko 3 guneak eta horien argazkiak
        agertzen zaizkizue eta beste aldean, bertako zereginak. Beraz, guneak eginkizunekin lotu behar dituzue.</string>
    <string name="nombre_2juego">EZETZ IGARRI</string>
    <string name="text_2juego">"Begira non gauden! Murgia Jauregian! Gune berezia inondik inora, magiaz eta xarmaz betea dagoelako. Donostiatik kilometro gutxira kokatua dago, Astigarragan. Murgia Jauregia XI. mendean sortu zen eta hasiera batean, Murgia familiaren dorretxea izan zen, jauregi bilakatu aurretik.  Jauregia, muino baten gainean dago, Urumea ibarraren gainean eta barruan historiaz betetako egongelak eta guneak ditu. Duela mende asko, zenbait sute jasan zituen jauregiak eta ondorioz, hainbat aldiz berregin behar izan zuten. Gainera, ikusten duzuen bezala, egungo sarrera nagusiaren gainean Murgia sendiaren armarria dago. Azkenik, gero ikusiko dugun moduan, Astigarragan Sagardo berriaren eguna edo Txotx irekiera ospatzen da eta normalean, egun horretako hasiera Murgiako jauregian egiten da. "</string>
    <string name="titulo2_juego">2. GUNEA: MURGIA JAUREGIA</string>
    <string name="que1_juego2">Ematen digu fruituak, gerizpea eta itzala, ekaitza iristen denean… azpian babes gaitzala!</string>
    <string name="que2_juego2">Zaharra naiz ni, zaharra da herria, Murgia jauregiaren ate gainean nagoen harria.</string>
    <string name="que3_juego2">Gogorra eta indartsua naiz, ez nauzue apurtuko garaiz, inguruan ikusten nauzue maiz. Nor naiz?</string>
    <string name="que4_juego2">Tipi-tapa tipi-tapa banoa gorantza, tipi-tapa tipi-tapa banoa beherantza, tipi-tapa tipi-tapa guztiak batera igo eta jaistean datza.</string>
    <string name="que1_ans1_juego2">Zuhaitza</string>
    <string name="que1_ans2_juego2">Etxea</string>
    <string name="que1_ans3_juego2">Lorea</string>
    <string name="que1_ans4_juego2">Atea</string>
    <string name="que2_ans1_juego2">Teilatua</string>
    <string name="que2_ans2_juego2">Armarria</string>
    <string name="que2_ans3_juego2">Leihoa</string>
    <string name="que2_ans4_juego2">Sarrera</string>
    <string name="que3_ans1_juego2">Egurra</string>
    <string name="que3_ans2_juego2">Zuhaitzak</string>
    <string name="que3_ans3_juego2">Harria</string>
    <string name="que3_ans4_juego2">Leihoa</string>
    <string name="que4_ans1_juego2">Eskailerak</string>
    <string name="que4_ans2_juego2">Leihoak</string>
    <string name="que4_ans3_juego2">Zuhaitzak</string>
    <string name="que4_ans4_juego2">Hostoak</string>
    <string name="emaitza">Emaitza</string>
    <string name="amaitu">Amaitu</string>
    <string name="ezetzigarrijolasa">Bigarren jolasaren izena “Ezetz igarri?” da. Beraz, lagunduko
        didazue asmakizunak asmatzen? Goazen, ba! Eta gogoratu, asmakizuna asmatzen baduzu, horren argazkia atera beharko duzula.</string>
    <string name="saiatuberriro">Saiatu berriro</string>
    <string name="text_bienvenidamapa">Hau izango da egingo behar duzuen ibilbidea ni sagardo bilakatzeko. Zorte on!</string>
    <string name="sagardantzajolasa">"Bosgarren geldiunera ailegatu gara!!! Astigar elkartera!!! Sagar Dantza ezagutzeko gogoekin? Zuek gustuko ahal duzue dantza egitea? Ba Astigartarrei asko gustatzen zaie ere, batez ere, Astigar Dantza taldeko kideei. Astigar Dantza taldeko neska- mutil gazteek, urtero, festa ezberdinak ospatzeko (Sagar uzta, txotx irekiera…) Sagar Dantza izeneko dantza bat egiten dute sagarrekin eta Astigarragako txoko ezberdinetan egiten da: sagardotegietan, plazan, sagardoetxean… Sagar dantza ez da soilik Astigarragan dantzatzen, beste zenbat herrietan ere dantzatzen da, baina dantza ez da guztiz berdina izaten leku guztietan. Jantziak ere herri batetik bestera aldatu egiten dira, hori dela eta, geldiune honetan egingo duzuen jardueran honekin erlazionatuta dago. Astigarragan Sagar Dantza dantzatzeko erabiltzen diren jantziak, adibidez, nahiko deigarriak dira, batez ere, “txorroko” deituriko kolorezko txapelari esker, oso bitxiak baitira! "</string>
    <string name="ikusibideoa">Ikusi bideoa</string>
    <string name="jolastu">Hasi jokoa</string>
    <string name="titulo31_juego">3. GUNEA: SANTA ANA</string>
    <string name="text_31juego">"Badakizue non gauden, ezta? Herriko Foru plazan! Badakizue zer ospatzen den hemen uztailaren 26an? Norbaitek asmatu du? Santa Ana, ezta? Dakizuenez, Santa Anan gure herriko sagardogileek eta Sagardun Patzuergoko kideek beren sagardoa jartzen dute festako edalontzi berezi batean, jendeak sagardo ezberdinak dastatzeko asmoz. Horrez gain, txorizo eta haragi gisatuko pintxoak ere salgai egoten dira. Zelako goxo dagoen guztia! Norbaitek daki noiztik ospatzen den jai egun hau? 1976 urtetik, Euskal Herrian ospatzen direnen artean zaharrena! Gainera, dakizuenez, idi-demak izaten dira sagardo dastaketarekin batera. Horrez gain, zanpantzarrak ere herritik barrena ibiltzen dira zintzarriak astinduz. Herri osoa alaitzen dute! "</string>
    <string name="text_32juego">"Laugarren geldiunera iritsi gara! Foru Plazara!!! Sagar Uzta ospatzen den tokira!  Irailean ospatzen den jaia da Sagar Uzta! Jende guztiarentzako prestatutako festa da eta gaur egunean zehar burutzen diren hainbat ekintza eta jarduera ikasiko ditugu.  Badakizue zein da festa honetarako motiboa? Sagarrak biltzeko garaia heltzen dela! Hori dela eta, egun hori sagardoa egiteko prozesua erakusteko eta herritartzeko asmoarekin ospatzen da.  Baina, zeintzuk dira egun honetan burutzen diren ekintzak edo jarduerak? Adi egon! Gero, informazio honekin bi ariketa egin beharko dituzuelako sagardoa egiteko hurrengo pausua zein den ezagutu ahal izateko. Egunean zehar askotariko ekintzak daude: goizean Musika Eskolako txistulariek esnatzen dute herria, sagar dantza dantzatzen da eta txalaparta doinua entzuten da. Gainera, lehengo zanpatze erakusketa, bertako sagar erakusketa eta artisau produktuen salmenta, eta sagardo dastatze eta salmenta egiten da, baita sagarrak probatzeko aukera dago ere.  "</string>
    <string name="titulo32_juego">4. GUNEA: SAGAR UZTA</string>
    <string name="text_4juego">"Bosgarren geldiunera ailegatu gara!!! Astigar elkartera!!! Sagar Dantza ezagutzeko gogoekin? Zuek gustuko ahal duzue dantza egitea? Ba Astigartarrei asko gustatzen zaie ere, batez ere, Astigar Dantza taldeko kideei. Astigar Dantza taldeko neska- mutil gazteek, urtero, festa ezberdinak ospatzeko (Sagar uzta, txotx irekiera…) Sagar Dantza izeneko dantza bat egiten dute sagarrekin eta Astigarragako txoko ezberdinetan egiten da: sagardotegietan, plazan, sagardoetxean… Sagar dantza ez da soilik Astigarragan dantzatzen, beste zenbat herrietan ere dantzatzen da, baina dantza ez da guztiz berdina izaten leku guztietan. Jantziak ere herri batetik bestera aldatu egiten dira, hori dela eta, geldiune honetan egingo duzuen jardueran honekin erlazionatuta dago. Astigarragan Sagar Dantza dantzatzeko erabiltzen diren jantziak, adibidez, nahiko deigarriak dira, batez ere, “txorroko” deituriko kolorezko txapelari esker, oso bitxiak baitira!  "</string>
    <string name="titulo4_juego">"5. GUNEA: SAGAR DANTZA "</string>
    <string name="siguiente">Hurrengoa</string>
    <string name="menu">MENU</string>
    <string name="administratorAccess">Administratzaile sarbidea</string>
    <string name="administratorAccessText">Pasahitza sartu administratzaile pribilegioak lortzeko</string>
    <string name="izena">Izena</string>
    <string name="puntuacion">Puntuazioa</string>
    <string name="ultimo_punto">Azken puntua</string>
</resources>