<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment4_menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="36dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/btn4f_repetir"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_repetir"
                android:text="@string/botonagain" />

            <Button
                android:id="@+id/btn4f_ajustes"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_ajustes"
                android:text="@string/botonajustes" />

            <Button
                android:id="@+id/btn4f_siguiente"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_siguiente"
                android:text="@string/botonmapa" />

            <Button
                android:id="@+id/btn4f_inicio"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_home"
                android:text="@string/botonhome" />

            <Button
                android:id="@+id/btn4f_ayuda"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_ayuda"
                android:text="@string/botonhelp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>