<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment5layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment5_ajustes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ajustes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtv6_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajustes"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#808080"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.828" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="108dp"
            android:orientation="vertical"
            android:padding="36dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/btn5f_home"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_home"
                android:text="@string/botonhome" />

            <Button
                android:id="@+id/btn5f_idioma"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_language"
                android:text="@string/botonidioma" />

            <Button
                android:id="@+id/btn5f_oscuro"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_theme"
                android:text="@string/botonoscuro" />

            <Button
                android:id="@+id/btn5f_admin"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_person"
                android:text="ADMIN" />

            <Button
                android:id="@+id/btn5f_acercade"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_ayuda"
                android:text="@string/botonacercade" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>