<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/useradmin"
        android:scaleType="fitXY"
        app:tint="@color/primary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/administratorAccess"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/adminDialogInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/administratorAccessText"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/smoothGray"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="7dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">


        <Button
            android:id="@+id/adminCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp" />

        <Button
            android:id="@+id/adminLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/confirm"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</LinearLayout>