<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment4_menu2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/txtv4_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.828" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="108dp"
            android:orientation="vertical"
            android:padding="36dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/btn4f_ajustes2"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_ajustes"
                android:text="@string/botonajustes" />

            <Button
                android:id="@+id/btn4f_siguiente2"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_siguiente"
                android:text="@string/botonmapa" />

            <Button
                android:id="@+id/btn4f_inicio2"
                style="@style/botonesMenu"
                android:drawableLeft="@drawable/ic_home"
                android:text="@string/botonhome" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>