<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment4layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment4_ajustes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ajustes"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtv4_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/ajustes"
            android:textColor="#808080"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv4_ajustes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll4_ajustes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn4f_home"
                    style="@style/botonesMenu"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_home"
                    android:text="@string/botonhome" />

                <Button
                    android:id="@+id/btn4f_idioma"
                    style="@style/botonesMenu"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_language"
                    android:text="@string/botonidioma" />

                <Button
                    android:id="@+id/btn4f_oscuro"
                    style="@style/botonesMenu"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_theme"
                    android:text="@string/botonoscuro" />

                <Button
                    android:id="@+id/btn4f_admin"
                    style="@style/botonesMenu"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_person"
                    android:text="ADMIN" />

                <Button
                    android:id="@+id/btn4f_acercade"
                    style="@style/botonesMenu"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_ayuda"
                    android:text="@string/botonacercade" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>